--- a/taste/src/app.css
+++ b/taste/src/app.css
@@ -4,3 +4,44 @@
 @tailwind components;
 @tailwind utilities;
 
+@keyframes slide-in {
+    0% {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+
+  .animated-bar {
+    animation: slide-in 1s ease-in-out forwards;
+    animation-delay: calc(var(--delay, 0s) + 3s); /* Add 4s base delay */
+  }
+
+  .animated-bar:nth-child(1) {
+    --delay: 0.2s;
+  }
+
+  .animated-bar:nth-child(2) {
+    --delay: 0.4s;
+  }
+
+  .animated-bar:nth-child(3) {
+    --delay: 0.6s;
+  }
+
+  .animated-bar:nth-child(4) {
+    --delay: 0.8s;
+  }
+
+  .animated-bar:nth-child(5) {
+    --delay: 1s;
+  }
+
+  .animated-bar:nth-child(6) {
+    --delay: 1.2s;
+  }
+
+ 
